frontend/referme-frontend-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: referme
  labels:
    app: referme
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: referme
  type: ClusterIP
