frontend/referme-frontend-chart/templates/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: referme
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: referme.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: referme
            port:
              number: 3000
